--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -18,6 +18,12 @@
             <li class="nav-item">
               <a class="nav-link" href="{% url 'new' %}">글쓰기</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'signup' %}">Signup</a>      
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">Login</a>      
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Dropdown
@@ -41,14 +47,27 @@
       </nav>
       <br>
       <div class="container">
-        {% for blog in blogs.all %}
-        <div class="card mt-5" >
-          <div class="card-body">
-            <h5 class="card-title">{{blog.title}}</h5>
-            <h6 class="card-subtitle mb-2 text-muted">{{blog.pub_date}}</h6>
-            <p class="card-text">{{blog.summary}}<a href="{% url 'detail' blog.id %}">..more</a></p>
+          {% for blog in posts %}
+          <br>
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">{{blog.title}}</h5>
+              <h6 class="card-subtitle mb-2 text-muted">{{blog.pub_date}}</h6>
+              <p class="card-text">{{blog.summary}}</p>
+              <a href="{%url 'detail' blog.id%}" class="card-link">...more</a>
+            </div>
           </div>
-        </div>
-        {% endfor %}
-      </div>      
+          {%endfor%}
+          {%if posts.has_previous%}
+          <a href="?page=1">First</a>
+          <a href="?page={{posts.previous_page_number}}">Previous</a>
+          {%endif%}
+          <span>{{posts.number}}</span>
+          <span>of</span>
+          <span>{{posts.paginator.num_pages}}</span>
+          {%if posts.has_next%}
+          <a href="?page={{posts.next_page_number}}">Next</a>
+          <a href="?page={{posts.paginator.num_pages}}">Last</a>
+          {%endif%}  
+      </div>
 </body>
