--- a/portfolio/templates/portfolio/portfolio.html
+++ b/portfolio/templates/portfolio/portfolio.html
@@ -22,7 +22,7 @@
       <main role="main">
         <section class="jumbotron text-center">
           <div class="container">
-            <h1 class="jumbotron-heading">My portfoilo</h1>
+            <h1 class="jumbotron-heading">My portfolio</h1>
             <p class="lead text-muted">여태까지 내가 만든 작품입니다.</p><br><br>
           </div>
           <div class="album py-5 bg-light">
